--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <%= link_to "Carla and Chris 2014", root_path, :id => "logo" %>
       <nav>
         <ul class="nav pull-right">
- 		  <li><%= link_to "Home", home_path %></li>
+ 		  <li><%= link_to "Home", root_path %></li>
 		  <% if signed_in? %>
 			<li><%= link_to "RSVP", home_path %></li>
 			<li id="fat-menu" class="dropdown">
