User edit complete

--- a/app/views/static_pages/details.html.erb
+++ b/app/views/static_pages/details.html.erb
@@ -2,6 +2,8 @@
   <h1>Wedding details</h1>
   <h2>The main game</h2>  
 	<h4>4 January 2014</h4>
+<p>The wedding ceremony and reception will be located at <a href="#">Boyd Baker House</a>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  
+  </p></br>
 <p class="blocktext">
 The ceremony and reception will both be held at <%= link_to "Boyd Baker House", directions_path %>. Please be there in plenty of time for a 4:00pm ceremony (there will be a short walk from the car park to the ceremony site).
 The ceremony will be followed by drinks and canapés, with dinner served around 7pm. 
@@ -30,6 +32,6 @@ Bear in mind that this is Melbourne – it could be 40 degrees. Or 14. Best to c
 <h4>5 January 2014</h4>
 <p class="blocktext">
 If you’re still in the area on Sunday morning we’d love you to join us for brunch at <%= link_to "Boyd Baker House", directions_path %> from 10:30am.
-For catering purposes, please let us know when you <%= link_to "RSVP", edit_user_path(current_user) %> whether or not you’ll be attending.
+For catering purposes, please let us know when you <%= link_to "RSVP", current_user %> whether or not you’ll be attending.
 </p>
 </div>
