--- a/app/views/static_pages/splash.html.erb
+++ b/app/views/static_pages/splash.html.erb
@@ -3,9 +3,9 @@
 <h2>Carla Aumann and Christopher Stewart</h2>
 <h4>cordially invite you to help celebrate the occasion of their wedding on</h4>
 <h2>Saturday, the Fourth day of January, in the year Twenty Fourteen</h2>
-  <p>The wedding ceremony and reception will be located at <a href="#">Boyd Baker House</a>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  
-  </p></br>
-  <h2><%= link_to "RSVP", home_path %></h2>
+  <h2><%= link_to "peruse the details", details_path %></h2>
+  <h3>or</h3>
+  <h2><%= link_to "rsvp now", current_user %></h2>
 <% else %>
   <h2>Carla Aumann and Christopher Stewart</h2>
   <p>Please <%= link_to "sign in", signin_path %> for details....</p>
