--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <ul class="nav pull-right">
  		  <li><%= link_to "Home", root_path %></li>
 		  <% if signed_in? %>
-			<li><%= link_to "RSVP", home_path %></li>
+			<li><%= link_to "RSVP", current_user %></li>
 			<li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Details <b class="caret"></b>
@@ -22,7 +22,8 @@
                 Administration <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Guest List", '#' %></li>
+                <li><%= link_to "Guest List", guests_path %></li>
+                <li><%= link_to "Add guest", newguest_path %></li>
 				<li><%= link_to "Registry", '#' %></li>
 			  </ul>
 		    </li>
@@ -31,7 +32,7 @@
                 Account <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-				<li><%= link_to "RSVP", home_path %></li>
+				<li><%= link_to "RSVP", current_user %></li>
                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
