--- a/app/views/guests/_guest_list.html.erb
+++ b/app/views/guests/_guest_list.html.erb
@@ -1,6 +1,6 @@
 	<tr>
 		<td><%= f.name %></td>
-		<td><%= f.brunch %></td>
+		<td><%= f.brunch.yesno %></td>
 		<td><%= f.bus %></td>
 		<td><%= f.diet %></td>
 	</tr>
