--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,8 +13,11 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Wedding details", details_path %></li>
+                <li><%= link_to "Attire", attire_path %></li>
                 <li><%= link_to "Getting there", directions_path %></li>
-				<li><%= link_to "Accommodation", accomodation_path %></li>
+				        <li><%= link_to "Accommodation", accomodation_path %></li>
+                <li><%= link_to "Things to do", other_path %></li>
+                <li><%= link_to "Gifts", registry_path %></li>
               </ul>
             </li>  
 			<li id="fat-menu" class="dropdown">
