--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,4 @@
 <h2>Contact Details</h2>
 <p>Seriously? </br>
 If you don't already have appropriate contact details you probably aren't actually invited....</p>
+<p>No, it's ok.  If you've got any questions just call us, or email us at <%= mail_to "carlaandchristietheknot@gmail.com"%>.<p>
