--- a/app/views/static_pages/accomodation.html.erb
+++ b/app/views/static_pages/accomodation.html.erb
@@ -1,66 +1,62 @@
 <div>
-  <h1>Accommodation </h2>
-  <h3>Grounds of Boyd Baker House</h3>
+  <h2>Accommodation</h2>
+  <p class="blocktext">The house itself is on a 35 acre block of forest – camping is strongly encouraged. For those of you who don’t fancy pitching a tent or parking a campervan, there are plenty of other options within a very short drive of the venue.
+Below are some of the accommodation options in the area. There is a hotel, a couple of motels and some B&Bs in Melton and Bacchus Marsh.</br> 
+We will organise a mini bus to pick up / drop off guests at the Quality Inn TabCorp Park. Please let us know when you <%= link_to "RSVP", current_user %> whether or not you’ll need a seat on the bus. 
+</p>
+ <h4>Grounds of Boyd Baker House</h4>
+
   <p class="blocktext">
 Bring a tent. Pitch it where you like. There are several bathrooms in the main house. 
 If you’d like to camp but can’t get your hands on a tent, let us know and we’ll see if we can borrow or steal one for you.
   </p>
   <p class="blocktext">The house itself is on a 35 acre block of forest – camping is strongly encouraged. For those of you who don’t fancy pitching a tent or parking a campervan, there are plenty of other options within a very short drive of the venue. </br>
   </p>
-<h3>Other Accommodation Options</h3>
-<p class="blocktext">
-Below are some of the accommodation options in the area. There is a hotel, a couple of motels and some B&Bs in Melton and Bacchus Marsh. If you prefer somewhere fancy, you’ll probably need to head back to Melbourne.</br>
-Depending on demand, we will organize a mini bus to pick people up from the accommodation options below or from a central location in Bacchus Marsh and Melton. If you intend to stay in Melbourne let us know – if there is enough demand we may be able to run the bus back to the city. </br>
-Please let us know when you RSVP whether or not you’ll need a seat on the bus. (Hint: if you’re camping, you won’t.)
-<p>
-	  <table class="content">
-		<col width="350" text="align-left">
-		<col width="150" text="align-left">
-		<col width="750">
-		<th align="left"></th>
-		<th align="left"></th>
-		<th align="left"></th>
-		<tr>
-  	  		<td><a href="http://www.tabcorppark.com.au">Quality Hotel Tabcorp Park</a></td>
-			<td>Melton</td>
-	  		<td>Hotel accommodation - probably the highest standard* accommodation in the immediate area</td>
-    	</tr>
-    	<tr>
-	  		<td><a href="http://www.sunnystones.com.au/">Sunnystones camp</a></td>
-			<td>Bacchus Marsh</td>
-	  		<td>School camp style accommodation, for those who like bunks! You’ll need to BYO linen and towels, but it’s only about $30 or $40 per person. Direct any enquiries to Sunnystones, but let us know if you’d like to choose this option as pricing is subject to numbers.</td>
-		</tr>
-		<tr>
-	  		<td><a href="http://www.sunnysidevilla.com.au/">Sunnyside Villa</a></td>
-	  		<td>Bacchus Marsh</td>
-			<td>Heritage B&B style accommodation</td>
-		</tr>
-		<tr>
-	  		<td><a href="http://www.ellersliehomestead.com/">Ellerslie Homestead</a></td>
-			<td>Bacchus Marsh</td>
-	  		<td>Heritage B&B style accommodation</td>
-		</tr>
-		<tr>
-	  		<td><a href="http://www.meltonmotorinn.com.au/">Melton Motor Inn & Apartments</a></td>
-			<td>Melton</td>
-	  		<td>Motel style accommodation</td>
-		</tr>
-		<tr>
-	  		<td><a href="http://bacchusmarshmotel.budgetmotelchain.com.au/ ">Bacchus Marsh Avenue motel</a></td>
-			<td>Bacchus Marsh</td>
-	  		<td>Budget Hotel, motel style accommodation (2br cottage also available)</td>
-		</tr>
-		<tr>
-	  		<td><a href="http://www.getaroom.com.au/Margot's-Bed-u2g-Breakfast-Bacchus-Marsh-hotel.htm"> Margot’s Bed & Breakfast</a></td>
-			<td>Bacchus Marsh</td>
-	  		<td>B&B style accommodation</td>
-		</tr>
-		<tr>
-	  		<td><a href="http://www.bacchusmarshcp.com.au/" >Bacchus Marsh Caravan Park</a></td>
-			<td>Bacchus Marsh</td>
-	  		<td>Caravan park with cabins</td>
-		</tr>
-	</table>
+<h4>Other Accommodation Options</h4>
+
+<table class="table">
+<tr >
+	<td class="span3"><a href="http://www.tabcorppark.com.au">Quality Hotel Tabcorp Park</a></td>
+	<td class="span2>">Melton</td>
+	<td class="span7">Hotel accommodation - probably the highest standard* accommodation in the immediate area</br>
+		Chris has bravely negotiated a 15% discount for anyone staying here, so if you choose to stay here please mention that you're part of a booking for the Stewart wedding at the time you book.</td>
+</tr>
+<tr>
+	<td><a href="http://www.sunnystones.com.au/">Sunnystones camp</a></td>
+	<td>Bacchus Marsh</td>
+	<td>School camp style accommodation, for those who like bunks! You’ll need to BYO linen and towels, but it’s only about $30 or $40 per person (depending on numbers). Direct any enquiries to Sunnystones, but let us know if you’d like to choose this option as pricing is subject to numbers so we may need a minimum number for it to be worthwhile.</td>
+</tr>
+<tr>
+		<td><a href="http://www.sunnysidevilla.com.au/">Sunnyside Villa</a></td>
+		<td>Bacchus Marsh</td>
+	<td>Heritage B&B style accommodation</td>
+</tr>
+<tr>
+		<td><a href="http://www.ellersliehomestead.com/">Ellerslie Homestead</a></td>
+	<td>Bacchus Marsh</td>
+		<td>Heritage B&B style accommodation</td>
+</tr>
+<tr>
+		<td><a href="http://www.meltonmotorinn.com.au/">Melton Motor Inn & Apartments</a></td>
+	<td>Melton</td>
+		<td>Motel style accommodation</td>
+</tr>
+<tr>
+		<td><a href="http://bacchusmarshmotel.budgetmotelchain.com.au/ ">Bacchus Marsh Avenue motel</a></td>
+	<td>Bacchus Marsh</td>
+		<td>Budget Hotel, motel style accommodation (2br cottage also available)</td>
+</tr>
+<tr>
+		<td><a href="http://www.getaroom.com.au/Margot's-Bed-u2g-Breakfast-Bacchus-Marsh-hotel.htm"> Margot’s Bed & Breakfast</a></td>
+	<td>Bacchus Marsh</td>
+		<td>B&B style accommodation</td>
+</tr>
+<tr>
+		<td><a href="http://www.bacchusmarshcp.com.au/" >Bacchus Marsh Caravan Park</a></td>
+	<td>Bacchus Marsh</td>
+		<td>Caravan park with cabins</td>
+</tr>
+</table>
 </br>
 <p class="littletext">*this is not saying much</p>
 </div>
