--- a/app/views/static_pages/details.html.erb
+++ b/app/views/static_pages/details.html.erb
@@ -1,37 +1,20 @@
 <div>
-  <h1>Wedding details</h1>
   <h2>The main game</h2>  
-	<h4>4 January 2014</h4>
-<p>The wedding ceremony and reception will be located at <a href="#">Boyd Baker House</a>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  
-  </p></br>
-<p class="blocktext">
-The ceremony and reception will both be held at <%= link_to "Boyd Baker House", directions_path %>. Please be there in plenty of time for a 4:00pm ceremony (there will be a short walk from the car park to the ceremony site).
-The ceremony will be followed by drinks and canapés, with dinner served around 7pm. 
-You will be expected on the dance floor later on…
-  </p>
-<h2>Attire</h2>
-<p class="blocktext">The dress code is “summer garden party”. We’re envisaging a semi-formal occasion in a relaxed and outdoorsy setting. We’re happy for you to interpret this however you like. If you’re after some more assistance:
-</p>
-<h5>Guys</h5>
-	<ul>
-		<ol>Ideal: Suit pants or chinos and a collared shirt. Ties are entirely optional. </ol>
-		<ol>Not quite ideal: Shorts. Speedos.</ol>
-	</ul>
-<h5>Girls</h5>
-<ul>
-	<ol>Ideal: A lovely cocktail dress / tea-length dress / maxi dress. Colour is encouraged.</ol>
-	<ol>Not quite ideal: Ball gowns. Full length white dresses*.</ol>
-*Brides excepted
-</ul>
+	<h4>Saturday 4 January 2014</h4>
+<p class="blocktext">The wedding ceremony and reception both will be located at <%= link_to "Boyd Baker House", directions_path %>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  Please be there in plenty of time for the a 4:00pm ceremony.</p>
+	<p class="blocktext">The ceremony will be followed by drinks and canapes, with dinner served around 7pm.</p>
+	<p class="blocktext">You will be expected on the dance floor after dinner.</p>
+
+
 
 <p>
 <p class="blocktext">
 Bear in mind that this is Melbourne – it could be 40 degrees. Or 14. Best to check the weather a few days out and plan for both anyway…
 </p>
 <h2>Further festivities</h2>
-<h4>5 January 2014</h4>
+<h4>Sunday 5 January 2014</h4>
 <p class="blocktext">
-If you’re still in the area on Sunday morning we’d love you to join us for brunch at <%= link_to "Boyd Baker House", directions_path %> from 10:30am.
+If you’re still in the area on Sunday morning we’d love you (and your kids!) to join us for brunch at <%= link_to "Boyd Baker House", directions_path %> from 10:30am.
 For catering purposes, please let us know when you <%= link_to "RSVP", current_user %> whether or not you’ll be attending.
 </p>
 </div>
