--- a/app/views/static_pages/accomodation.html.erb
+++ b/app/views/static_pages/accomodation.html.erb
@@ -1,10 +1,10 @@
 <div>
-  <h2>Accommodation</h2>
+  <h2 class="jennasue">Accommodation</h2>
   <p class="blocktext">The house itself is on a 35 acre block of forest – camping is strongly encouraged. For those of you who don’t fancy pitching a tent or parking a campervan, there are plenty of other options within a very short drive of the venue.
 Below are some of the accommodation options in the area. There is a hotel, a couple of motels and some B&Bs in Melton and Bacchus Marsh.</br> 
 We will organise a mini bus to pick up / drop off guests at the Quality Inn TabCorp Park. Please let us know when you <%= link_to "RSVP", current_user %> whether or not you’ll need a seat on the bus. 
 </p>
- <h4>Grounds of Boyd Baker House</h4>
+ <h4 class="jennasue">Grounds of Boyd Baker House</h4>
 
   <p class="blocktext">
 Bring a tent. Pitch it where you like. There are several bathrooms in the main house. 
@@ -12,7 +12,7 @@ If you’d like to camp but can’t get your hands on a tent, let us know and we
   </p>
   <p class="blocktext">The house itself is on a 35 acre block of forest – camping is strongly encouraged. For those of you who don’t fancy pitching a tent or parking a campervan, there are plenty of other options within a very short drive of the venue. </br>
   </p>
-<h4>Other Accommodation Options</h4>
+<h4 class="jennasue">Other Accommodation Options</h4>
 
 <table class="table">
 <tr >
