--- a/app/views/static_pages/attire.html.erb
+++ b/app/views/static_pages/attire.html.erb
@@ -1,4 +1,4 @@
-<h2>Attire</h2>
+<h2 class="jennasue">Attire</h2>
 <p class="blocktext">The dress code is “summer garden party”. We’re envisaging a semi-formal occasion in a relaxed and outdoorsy setting. We’re happy for you to interpret this however you like. If you’re after some more assistance:
 </p>
 <h4 class="leftalign">Guys</h4>
