--- a/app/views/static_pages/directions.html.erb
+++ b/app/views/static_pages/directions.html.erb
@@ -1,4 +1,4 @@
-<h2>Getting there</h2>
+<h2 class="jennasue">Getting there</h2>
 <p>Boyd Baker House is about a 45-50 minute drive from Melbourne. If you’re driving please leave an hour in case of heavy traffic. 
 	</p>
 
