--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
+<header class="navbar navbar-fixed-top navbar-inverse" class="green">
+  <div class="navbar-inner green">
     <div class="container">
       <%= link_to "Carla and Chris 2014", root_path, :id => "logo" %>
       <nav>
@@ -9,7 +9,7 @@
 			<li><%= link_to "RSVP", current_user %></li>
 			<li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Details <b class="caret"></b>
+               Details <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Wedding details", details_path %></li>
