--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
 <% if signed_in? %>
   <div class="row">
   <div class="span6 offset3">	
-    <h2><%= @user.name %></h2>
+    <h2 class="jennasue"><%= @user.name %></h2>
     <h4>Account Settings</h4>
   	  <%= form_for(@user) do |f| %>
  	  <%= render 'shared/error_messages', object: f.object %>
