--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
 <% provide(:title, @user.name) %>
-<div class="row">
-<h4>Carla Aumann and Christopher Stewart cordially invite</h4>
-<h2><%= @user.name %></h2>
+<div class="jennasue">
+<h2>Carla Aumann and Christopher Stewart cordially invite</h2>
+<h2><%= @user.name %></h1>
 <h4>A party of <%= pluralize(@user.guests.count, "guest") %></h4>
+</div>
+<div>
 <p>
 Kindly RSVP by checking the appropriate boxes below.  If you'll be joining us, please also indicate if you'll also be attending the <%= link_to "Sunday brunch", details_path %>, if you need the bus from <%= link_to "Quality Inn Tabcorp", accomodation_path %> in Melton, and if you have any dietary requirements that we should be aware of.</br>
 </p>
@@ -19,7 +21,8 @@ Kindly RSVP by checking the appropriate boxes below.  If you'll be joining us, p
           <tr>
             <td><%= builder.text_field :name, placeholder: "Guest name" %></td>
             <td>
-              <%= builder.select :wedding,[["Woohoo! I'm there!", true],["I'm a bad friend", false]] %>
+              <%= builder.radio_button :wedding, "true" %> Woohoo! I'm there!</br>
+              <%= builder.radio_button :wedding, "false" %> I'm a bad friend
             </td>
             <td>
               <%= builder.radio_button :brunch, "true" %> Yes please!</br>
