re initialized git

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <a href="#">Portly Owl Web Development</a>
+    <a href="#">Portly Owl</a>
   </small>
   <nav>
     <ul>
