--- a/app/views/static_pages/details.html.erb
+++ b/app/views/static_pages/details.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h2 class="jennasue">The main game</h2>  
 	<h4 class="jennasue">Saturday 4 January 2014</h4>
-<p class="blocktext">The wedding ceremony and reception both will be located at <%= link_to "Boyd Baker House", directions_path %>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  Please be there in plenty of time for the a 4:00pm ceremony.</p>
+<p class="blocktext">The wedding ceremony and reception both will be located at <%= link_to "Boyd Baker House", directions_path %>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  Please be there in plenty of time for a 4:00pm ceremony.</p>
 	<p class="blocktext">The ceremony will be followed by drinks and canapes, with dinner served around 7pm.</p>
 	<p class="blocktext">You will be expected on the dance floor after dinner.</p>
 
