--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "contact")
 <h2 class="jennasue">Contact Details</h2>
 <p>Seriously? </br>
 If you don't already have appropriate contact details you probably aren't actually invited....</p>
