--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
-      
+      <%= f.radio_button :admin, "true" %>Admin</br>
 
       <%= f.submit "Create new user", class: "btn btn-large btn-primary" %>
     <% end %>
