--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,6 +15,7 @@
       <%= f.password_field :password %>
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
+      <%= f.radio_button :admin, "true" %>Admin</br>
 	  <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
 	<% end %>
 	</div>
