--- a/app/views/static_pages/accomodation.html.erb
+++ b/app/views/static_pages/accomodation.html.erb
@@ -1,19 +1,22 @@
-<div>
-  <h2 class="jennasue">Accommodation</h2>
-  <p class="blocktext">The house itself is on a 35 acre block of forest – camping is strongly encouraged. For those of you who don’t fancy pitching a tent or parking a campervan, there are plenty of other options within a very short drive of the venue.
-Below are some of the accommodation options in the area. There is a hotel, a couple of motels and some B&Bs in Melton and Bacchus Marsh.</br> 
-We will organise a mini bus to pick up / drop off guests at the Quality Inn TabCorp Park. Please let us know when you <%= link_to "RSVP", current_user %> whether or not you’ll need a seat on the bus. 
+<div class="jennasue">
+  <h2><b>Accommodation</b></h2>
+ </div>
+  <p class="blocktext">The best option is to camp among the bushland surrounding the Boyd Baker House, but if that's not your cup of tea there is a hotel, a couple of motels and some B&Bs in Melton and Bacchus Marsh. Below are some of the accommodation options in the area.</p>
+  <p class="blocktext">We will organise a mini bus to pick up / drop off guests at the Quality Inn TabCorp Park. Please let us know when you <%= link_to "RSVP", current_user %> whether or not you’ll need a seat on the bus. 
 </p>
- <h4 class="jennasue">Grounds of Boyd Baker House</h4>
-
+<div class="jennasue">
+  <h4><b>Grounds of Boyd Baker House</b></h4>
+</div>
   <p class="blocktext">
 Bring a tent. Pitch it where you like. There are several bathrooms in the main house. 
 If you’d like to camp but can’t get your hands on a tent, let us know and we’ll see if we can borrow or steal one for you.
   </p>
-  <p class="blocktext">The house itself is on a 35 acre block of forest – camping is strongly encouraged. For those of you who don’t fancy pitching a tent or parking a campervan, there are plenty of other options within a very short drive of the venue. </br>
+  <p class="blocktext">The house itself is on a 35 acre block of forest – camping is strongly encouraged (particularly as there is no official 'end time'!). For those of you who don’t fancy pitching a tent or parking a campervan, there are plenty of other options within a very short drive of the venue. </br>
   </p>
-<h4 class="jennasue">Other Accommodation Options</h4>
 
+<div class="jennasue">
+  <h4><b>Other Accommodation Options</b></h4>
+</div>
 <table class="table">
 <tr >
 	<td class="span3"><a href="http://www.tabcorppark.com.au">Quality Hotel Tabcorp Park</a></td>
