--- a/app/views/static_pages/attire.html.erb
+++ b/app/views/static_pages/attire.html.erb
@@ -1,11 +1,18 @@
-<h2 class="jennasue">Attire</h2>
+<div class="jennasue">
+	<h2><b>Attire</b></h2>
+</div>
 <p class="blocktext">The dress code is “summer garden party”. We’re envisaging a semi-formal occasion in a relaxed and outdoorsy setting. We’re happy for you to interpret this however you like. If you’re after some more assistance:
-</p>
-<h4 class="leftalign">Guys</h4>
+</p></br>
+<div class="jennasue">
+  <h4 class="leftalign">Guys</h4>
+</div>
+
   <p class="blocktext"><strong>Ideal:</strong> Suit pants or chinos and a collared shirt. Ties are entirely optional. </p>
-  <p class="blocktext"><strong>Not quite ideal:</strong> Shorts. Speedos. Thongs.</p>
-<h4 class="leftalign">Girls</h4>
+  <p class="blocktext"><strong>Not quite ideal:</strong> Shorts. Speedos. Thongs.</p></br>
+<div class="jennasue">
+  <h4 class="leftalign">Girls</h4>
+</div>
   <p class="blocktext"><strong>Ideal:</strong> A lovely cocktail dress / tea-length dress / maxi dress. Colour is encouraged.</p>
 	<p class="blocktext"><strong>Not quite ideal:</strong> Ball gowns. Full length white dresses*.</p>
-*Brides excepted
+*Brides excepted</br>
 <p class="blocktext">Bear in mind that this is Melbourne - it could be 40 degrees. Or 14. Best to check the weather a few days out .... and plan for both anyway.</p> 
