--- a/app/views/static_pages/directions.html.erb
+++ b/app/views/static_pages/directions.html.erb
@@ -1,4 +1,6 @@
-<h2 class="jennasue">Getting there</h2>
+<div class="jennasue">
+  <h2><b>Getting there</b></h2>
+</div>
 <p>Boyd Baker House is about a 45-50 minute drive from Melbourne. If you’re driving please leave an hour in case of heavy traffic. 
 	</p>
 
@@ -6,7 +8,6 @@
 	Boyd Baker House</br>
 	305 Long Forest Road,</br> 
 	Long Forest, Victoria</br>
-	GPS Coordinates:  37°39’11.52”S 144°30’7.08”E</br>
 	(Not all satellite navigation systems recognise Long Forest as a place. You have been warned!)
   </p>
 	<p class="blocktext">If driving from Melbourne, the easiest path is probably via the Westgate Freeway. If you’re coming from the Northern or Eastern suburbs it may be easier to take the Princes Highway. 
