--- a/app/views/static_pages/registry.html.erb
+++ b/app/views/static_pages/registry.html.erb
@@ -1,15 +1,14 @@
-<h2 class="jennasue">Gift Registry</h2>
+<h2 class="jennasue"><b>Gift Registry</b></h2>
 <p class="blocktext">
 	Many of you will be travelling an awfully long way to be there on our wedding day. Even more of you have already helped us out with various aspects of the wedding. Your presence at the wedding is the most important thing to us; gifts are not expected and certainly not necessary.</br>
 	Some people have told us that they are keen to buy us a gift in any event and would like some guidance as to what we could use.</p>
-<h4 class="jennasue">Honeymoon help</h4>
+<h4 class="jennasue"><b>Honeymoon help</b></h4>
 	<p class="blocktext">
 	We are stretching ourselves a bit in honeymoon planning and have decided to head to Tanzania for a mix of climbing, safari and beach time. We would be really pleased to receive a contribution towards our honeymoon and will have a safari suitcase at the venue for this purpose (since that sounds more intrepid than a ‘wishing well’). </p>
-<h4 class="jennasue">Things for the home</h4>
+<h4 class="jennasue"><b>Things for the home</b></h4>
 	<p class="blocktext">
 	We are also still essentially living in a student house and would love some help to upgrade to grown-up goods. The sorts of things we’d like to purchase include:
 		<ol>
-			<li>TV</li>
 			<li>Couch</li>
 			<li>Table & chairs</li>
 			<li>Soup spoons</li>
