--- a/app/views/static_pages/splash.html.erb
+++ b/app/views/static_pages/splash.html.erb
@@ -2,11 +2,11 @@
 <% if signed_in? %>
 <div class="jennasue">
 <h1>Carla and Chris' Wedding</h1>
-<h2>Saturday 4th January 2014</h2>
-<h4>Beautiful bride</br>
+<h3>Beautiful bride</br>
   Handsome groom</br>
   Booze, food, and bad dance moves ... </br>
-  Are you in or what?</h4>
+  Are you in or what?</h3>
+ <h3><b>Saturday 4 January 2014</b></h3>
 <p>Welcome to our wedding website where you can find all the info we otherwise</br> forgot (or will forget) to tell you, all in one convenient location.</p>
   <h2><%= link_to "peruse the details", details_path %></br>
     or</br>
