--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -267,6 +267,12 @@ aside {
   font-family: 'jenna_sueregular';
   font-size: 30px;
 }
+.avantgarde {
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+}
+.centurygothic {
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+}
 
 
 
