--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,10 +17,10 @@
                 <li><%= link_to "Getting there", directions_path %></li>
 				        <li><%= link_to "Accommodation", accomodation_path %></li>
                 <li><%= link_to "Things to do", other_path %></li>
-                <li><%= link_to "Gifts", registry_path %></li>
               </ul>
             </li>  
-            
+      
+      <% if current_user.admin? %>
 			<li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Administration <b class="caret"></b>
@@ -28,10 +28,10 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Guest List", guests_path %></li>
                 <li><%= link_to "Add guest", newguest_path %></li>
-				<li><%= link_to "Registry", '#' %></li>
+				<li><%= link_to "Registry", registry_path %></li>
 			  </ul>
 		    </li>
-        
+      <% end %>
 			<li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
