--- a/app/views/static_pages/details.html.erb
+++ b/app/views/static_pages/details.html.erb
@@ -1,17 +1,17 @@
-<div>
-  <h2 class="jennasue">The main game</h2>  
-	<h4 class="jennasue">Saturday 4 January 2014</h4>
-<p class="blocktext">The wedding ceremony and reception both will be located at <%= link_to "Boyd Baker House", directions_path %>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  Please be there in plenty of time for a 4:00pm ceremony.</p>
+<div class="jennasue">
+  <h2><b>The main game</b></h2>  
+	<h4 >Saturday 4 January 2014</h4>
+</div>
+<p class="blocktext">The wedding ceremony and reception both will be located at <%= link_to "Boyd Baker House", directions_path %>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  Please be there in plenty of time for a 4:30pm ceremony.</p>
+<p class="centurygothic">Century Gothic AAAaaa Text</p>
 	<p class="blocktext">The ceremony will be followed by drinks and canapes, with dinner served around 7pm.</p>
 	<p class="blocktext">You will be expected on the dance floor after dinner.</p>
 
 
 
-<p>
-<p class="blocktext">
-Bear in mind that this is Melbourne – it could be 40 degrees. Or 14. Best to check the weather a few days out and plan for both anyway…
-</p>
-<h2 class="jennasue">Further festivities</h2>
+<p></br>
+
+<h2 class="jennasue"><b>Further festivities</b></h2>
 <h4 class="jennasue">Sunday 5 January 2014</h4>
 <p class="blocktext">
 If you’re still in the area on Sunday morning we’d love you (and your kids!) to join us for brunch at <%= link_to "Boyd Baker House", directions_path %> from 10:30am.
