--- a/app/views/static_pages/attire.html.erb
+++ b/app/views/static_pages/attire.html.erb
@@ -14,5 +14,6 @@
 </div>
   <p class="blocktext"><strong>Ideal:</strong> A lovely cocktail dress / tea-length dress / maxi dress. Colour is encouraged.</p>
 	<p class="blocktext"><strong>Not quite ideal:</strong> Ball gowns. Full length white dresses*.</p>
-*Brides excepted</br>
+	<p class="blocktext">*Brides excepted</p></br>
+
 <p class="blocktext">Bear in mind that this is Melbourne - it could be 40 degrees. Or 14. Best to check the weather a few days out .... and plan for both anyway.</p> 
