--- a/app/views/static_pages/directions.html.erb
+++ b/app/views/static_pages/directions.html.erb
@@ -6,7 +6,7 @@
 
 	  <p>
 	Boyd Baker House</br>
-	305 Long Forest Road,</br> 
+	305 Long Forest Road</br> 
 	Long Forest, Victoria</br>
 	(Not all satellite navigation systems recognise Long Forest as a place. You have been warned!)
   </p>
