--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,9 @@
 
 $grayMediumLight: #eaeaea; 
 
+$headerGreen: #125624;
+$mediumGreen: #125624;
+
 @mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -50,6 +53,7 @@ h1 {
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
+  color: $mediumGreen;
 }
 
 h2 {
@@ -82,6 +86,19 @@ p {
   text-align:center;
 }
 
+/* links */
+a:greenlink {
+  color:#125624;
+}      
+a:visited {
+  color:#00FF00;
+}
+a:hover {
+  color:#FF00FF;
+}
+a:active {
+  color:#0000FF;
+}
 
 /* header */
 
@@ -149,6 +166,7 @@ footer {
   margin-top: 45px;
   @include box_sizing;
 }
+
 /* sidebar */
 
 aside {
@@ -267,12 +285,8 @@ aside {
   font-family: 'jenna_sueregular';
   font-size: 30px;
 }
-.avantgarde {
-  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-}
-.centurygothic {
-  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-}
 
-
+.greentext {
+      color: $headerGreen;
+}
 
