--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,9 +2,11 @@
 <h3>Update Your Details</h3>
 <% if signed_in? %>
   <div class="row">
-  <div class="span6 offset3">	
-    <h2 class="jennasue"><%= @user.name %></h2>
-    <h4>Account Settings</h4>
+  <div class="span6 offset3 ">	
+    <div class="jennasue">
+    <h2 style="color:#125624"><%= @user.name %></h2>
+    </div>
+    <h4 >Account Settings</h4>
   	  <%= form_for(@user) do |f| %>
  	  <%= render 'shared/error_messages', object: f.object %>
 	  <%= f.label :party %>
@@ -15,7 +17,6 @@
       <%= f.password_field :password %>
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
-      <%= f.radio_button :admin, "true" %>Admin</br>
 	  <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
 	<% end %>
 	</div>
