--- a/app/views/static_pages/attire.html.erb
+++ b/app/views/static_pages/attire.html.erb
@@ -1,16 +1,16 @@
 <div class="jennasue">
-	<h2><b>Attire</b></h2>
+	<h2 class="browntext"><b>Attire</b></h2>
 </div>
 <p class="blocktext">The dress code is “summer garden party”. We’re envisaging a semi-formal occasion in a relaxed and outdoorsy setting. We’re happy for you to interpret this however you like. If you’re after some more assistance:
 </p></br>
 <div class="jennasue">
-  <h4 class="leftalign">Guys</h4>
+  <h4 class="leftalign greentext">Guys</h4>
 </div>
 
   <p class="blocktext"><strong>Ideal:</strong> Suit pants or chinos and a collared shirt. Ties are entirely optional. </p>
   <p class="blocktext"><strong>Not quite ideal:</strong> Shorts. Speedos. Thongs.</p></br>
 <div class="jennasue">
-  <h4 class="leftalign">Girls</h4>
+  <h4 class="leftalign greentext">Girls</h4>
 </div>
   <p class="blocktext"><strong>Ideal:</strong> A lovely cocktail dress / tea-length dress / maxi dress. Colour is encouraged.</p>
 	<p class="blocktext"><strong>Not quite ideal:</strong> Ball gowns. Full length white dresses*.</p>
