--- a/app/views/static_pages/details.html.erb
+++ b/app/views/static_pages/details.html.erb
@@ -1,6 +1,6 @@
 <div class="jennasue">
-  <h2><b>The main game</b></h2>  
-	<h4>Saturday 4 January 2014</h4>
+  <h2 class="greentext"><b>The main game</b></h2>  
+	<h4 class="browntext">Saturday 4 January 2014</h4>
 </div>
 <p class="blocktext">The wedding ceremony and reception both will be located at <%= link_to "Boyd Baker House", directions_path %>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  Please be there in plenty of time for a 4:30pm ceremony.</p>
 	<p class="blocktext">The ceremony will be followed by drinks and canapes, with dinner served around 7pm.</p>
@@ -10,8 +10,8 @@
 
 <p></br>
 <div class="jennasue">
-  <h2><b>Further festivities</b></h2>
-  <h4>Sunday 5 January 2014</h4>
+  <h2 class="greentext"><b>Further festivities</b></h2>
+  <h4 class="browntext">Sunday 5 January 2014</h4>
 </div>
 <p class="blocktext">
 If you’re still in the area on Sunday morning we’d love you (and your kids!) to join us for brunch at <%= link_to "Boyd Baker House", directions_path %> from 10:30am.
