--- a/app/views/static_pages/accomodation.html.erb
+++ b/app/views/static_pages/accomodation.html.erb
@@ -1,11 +1,11 @@
 <div class="jennasue">
-  <h2><b>Accommodation</b></h2>
+  <h2 class="browntext"><b>Accommodation</b></h2>
  </div>
   <p class="blocktext">The best option is to camp among the bushland surrounding the Boyd Baker House, but if that's not your cup of tea there is a hotel, a couple of motels and some B&Bs in Melton and Bacchus Marsh. Below are some of the accommodation options in the area.</p>
   <p class="blocktext">We will organise a mini bus to pick up / drop off guests at the Quality Inn TabCorp Park. Please let us know when you <%= link_to "RSVP", current_user %> whether or not you’ll need a seat on the bus. 
 </p>
 <div class="jennasue">
-  <h4><b>Grounds of Boyd Baker House</b></h4>
+  <h4 class="browntext"><b>Grounds of Boyd Baker House</b></h4>
 </div>
   <p class="blocktext">
 Bring a tent. Pitch it where you like. There are several bathrooms in the main house. 
@@ -15,7 +15,7 @@ If you’d like to camp but can’t get your hands on a tent, let us know and we
   </p></br>
 
 <div class="jennasue">
-  <h4><b>Other Accommodation Options</b></h4>
+  <h4 class="browntext"><b>Other Accommodation Options</b></h4>
 </div>
 <table class="table">
 <tr >
