--- a/app/views/static_pages/directions.html.erb
+++ b/app/views/static_pages/directions.html.erb
@@ -1,5 +1,5 @@
 <div class="jennasue">
-  <h2><b>Getting there</b></h2>
+  <h2 style="color:#543512"><b>Getting there</b></h2>
 </div>
 <p>Boyd Baker House is about a 45-50 minute drive from Melbourne. If you’re driving please leave an hour in case of heavy traffic. 
 	</p>
